# OpenGL-Rasterizer

./: .gitignore  CMakeLists.txt  ObjParser.cpp  ObjParser.hpp  camera.hpp  main.cpp  materials.hpp  mesh.hpp  obj_loader.cpp  obj_loader.hpp  orbit_camera.hpp  rasterizer.cpp  rasterizer.hpp  shader.frag  shader.vert
shading/: CMakeLists.txt  shader.frag
textures/: CMakeLists.txt  main.cpp  shader.frag  shader.vert
